RESOLVED FIXED286302
[Regression@289122@main] [WebGPU] WebGPU is crashing in workers
https://bugs.webkit.org/show_bug.cgi?id=286302
Summary [Regression@289122@main] [WebGPU] WebGPU is crashing in workers
Mike Wyrzykowski
Reported 2025-01-21 09:39:02 PST
[Regression@289122@main] [WebGPU] WebGPU is crashing in workers
Attachments
Radar WebKit Bug Importer
Comment 1 2025-01-21 09:39:17 PST
Mike Wyrzykowski
Comment 2 2025-01-21 09:48:00 PST
EWS
Comment 3 2025-01-21 14:07:10 PST
Committed 289202@main (6908c56357a4): <https://commits.webkit.org/289202@main> Reviewed commits have been landed. Closing PR #39325 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.