[Regression@289122@main] [WebGPU] WebGPU is crashing in workers https://bugs.webkit.org/show_bug.cgi?id=286302 rdar://143325202

Reviewed by Tadeu Zagallo.

Ensure WebProcess::singleton().ensureProtectedGPUProcessConnection()->protectedVideoFrameObjectHeapProxy() is
called on the main thread, otherwise we will encounter a thread assertion and crash
the web content process.

* Source/WebKit/WebProcess/GPU/graphics/WebGPU/RemoteQueueProxy.cpp:
(WebKit::WebGPU::RemoteQueueProxy::RemoteQueueProxy):

Canonical link: https://commits.webkit.org/289202@main